fix: keycloak and quota